--- a/knockBE/src/main/resources/application.properties
+++ b/knockBE/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=stockknock
 
 # Database Configuration (PostgreSQL)
-spring.datasource.url=jdbc:postgresql://localhost:5432/stockknockDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/stockknockdb
 spring.datasource.username=sxxm
 spring.datasource.password=sxxmpass
 spring.datasource.driver-class-name=org.postgresql.Driver
