--- a/knockBE/src/main/resources/application.properties
+++ b/knockBE/src/main/resources/application.properties
@@ -32,3 +32,17 @@ jwt.expiration=86400000
 # Stock API Configuration (예: Alpha Vantage, Yahoo Finance 등)
 stock.api.alpha-vantage.key=${ALPHA_VANTAGE_API_KEY:}
 stock.api.yahoo-finance.enabled=true
+stock.api.twelve-data.key=${TWELVE_DATA_API_KEY:}
+
+# News API Configuration
+news.api.newsapi.key=${NEWS_API_KEY:}
+news.api.enabled=true
+
+# Email Configuration (선택사항)
+spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${SPRING_MAIL_PORT:587}
+spring.mail.username=${SPRING_MAIL_USERNAME:}
+spring.mail.password=${SPRING_MAIL_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+notification.email.enabled=${NOTIFICATION_EMAIL_ENABLED:false}
