--- a/knockBE/src/main/resources/application.properties
+++ b/knockBE/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# 테이블 이름을 엔티티의 @Table 어노테이션에 명시된 이름 그대로 사용 (복수형 변환 방지)
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Server Configuration
 server.port=8080
@@ -67,6 +69,13 @@ stock.api.twelve-data.key=${TWELVE_DATA_API_KEY:}
 # ============================================
 # News API 설정
 # ============================================
+# ⚠️ NewsAPI 키 설정 필요:
+# 1. https://newsapi.org/register 에서 무료 API 키 발급
+# 2. 환경 변수 설정: export NEWS_API_KEY=your_api_key_here
+# 3. 또는 IDE 실행 설정에서 환경 변수 추가
+# 
+# 무료 플랜 제한: 일일 100회 요청
+# 개발자 플랜: 일일 250회 요청
 news.api.newsapi.key=${NEWS_API_KEY:}
 news.api.enabled=true
 
@@ -77,3 +86,13 @@ notification.email.enabled=${NOTIFICATION_EMAIL_ENABLED:false}
 # FastAPI 설정
 # ============================================
 fastapi.base-url=${FASTAPI_BASE_URL:http://localhost:8000}
+
+# ============================================
+# Swagger/OpenAPI 설정
+# ============================================
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
